feat: Deploy AI Service Java with Mock Mode support
- Convert Python skeleton to Java Spring Boot structure
- Add Mock Mode (works without API key) and Real Mode support
- Update API Gateway route configuration for AI service
- Remove unused Python skeleton files (ai-service-python/)
- Remove unused Dockerfile.local and AiServiceClient
- Add comprehensive security features (Rate Limiting, Input Sanitization)
- Update Wallet service with lazy initialization
- Fix authorization issues in multiple controllers
- Add detailed API key configuration documentation

Changes:
- ai-service: Mock/Real mode implementation
- api-gateway: AI service route configuration
- user-service: Security enhancements, wallet fixes
- test-scripts: Deployment and verification scripts